# vidproc

./: CMakeLists.txt  README.md  main.cpp
vidproc/: videoprocess.cpp  videoprocess.h
